fixed z-index for mobile menu

--- a/my-app/src/components/Header/Header.scss
+++ b/my-app/src/components/Header/Header.scss
@@ -197,7 +197,7 @@
 
   .header-brand {
     position: fixed;
-    z-index: 30;
+    z-index: 1000;
     margin-top: 10px;
   }
 
@@ -206,7 +206,7 @@
     height: 0.2em;
     background-color: #ed174c;
     border-radius: 5em;
-    z-index: 5;
+    z-index: 1000;
   }
 
   .burger-bar-fixed {
@@ -214,7 +214,7 @@
     height: 0.2em;
     background-color: #ffffff;
     border-radius: 5em;
-    z-index: 5;
+    z-index: 1000;
   }
 
   .menu {
@@ -226,7 +226,7 @@
     width: 100%;
     height: 60%;
     position: fixed;
-    z-index: 20;
+    z-index: 1000;
     display: flex;
     align-items: center;
     margin-top: 80px;
